Adjusted slider position in the figure to improve vertical alignment and prevent overlap with the lower axis.

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,38 +1,38 @@
 [Tab1]
-SParameter=S11
+SParameter=S21
 GraphType1=Magnitude
 
 [Tab2]
 SParameter=S11
-GraphType2=Phase
+GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#ff0000
-MarkerColor=#00ff00
-TraceWidth=4
-MarkerWidth=7
+TraceColor=#00aa7f
+MarkerColor=#55ffff
+TraceWidth=2
+MarkerWidth=9
 BackgroundColor=#000000
-TextColor=#ffffff
-AxisColor=#ffffff
-db_times=dB
+TextColor=#ff5500
+AxisColor=#55aaff
+db_times=Voltage ratio
 graph_number=1
 
 [Graphic2]
 TraceColor=#55ffff
 MarkerColor=#ff00ff
 TraceWidth=3
-MarkerWidth=6
+MarkerWidth=13
 BackgroundColor=#000000
-TextColor=#ffffff
-AxisColor=#ffffff
+TextColor=#ffff7f
+AxisColor=#ffaaff
 db_times=dB
 graph_number=2
 
 [Cursor1]
-index=61
+index=0
 
 [Cursor2]
-index=61
+index=0
 
 [Markers]
 locked=false
