--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -2,6 +2,43 @@
 Kits=false
 Method=OSM (Open - Short - Match)
 NoCalibration=true
-Parameter=S11
+Parameter="S11, S21"
 isImportDut=false
 DUT=false
+id=5
+Name=OSM_Calibration_20251028_195225_5
+
+[Kit_1]
+kit_name=Normalization_Calibration_20251028_192343
+method=Normalization
+id=1
+
+[Kit_2]
+kit_name=1PortN_Calibration_20251028_192632
+method=1-Port+N
+id=2
+
+[Kit_3]
+kit_name=Enhanced Response_Calibration_20251028_193147
+method=Enhanced-Response
+id=3
+
+[Kit_4]
+kit_name=Normalization_Calibration_20251028_195050
+method=Normalization
+id=4
+
+[Kit_5]
+kit_name=OSM_Calibration_20251028_195225
+method=OSM (Open - Short - Match)
+id=5
+
+[Kit_6]
+kit_name=OSM_Calibration_20251028_195317
+method=OSM (Open - Short - Match)
+id=6
+
+[Kit_7]
+kit_name=OSM_Calibration_20251028_195414
+method=OSM (Open - Short - Match)
+id=7
