Implement independent right cursor update function similar to left cursor

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -28,12 +28,6 @@ AxisColor=#ffaaff
 db_times=dB
 graph_number=2
 
-[Cursor1]
-index=39
-
-[Cursor2]
-index=0
-
 [Markers]
 locked=false
 
@@ -86,3 +80,15 @@ QSpinBox\background-color=white
 Qframe\background-color=white
 Qframe\color=white
 QComboBox\color=white
+
+[Cursor_1_1]
+index=0
+
+[Cursor_1_2]
+index=30
+
+[Cursor_2_1]
+index=50
+
+[Cursor_2_2]
+index=79
