--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -7,8 +7,8 @@ SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#00aa7f
-MarkerColor=#55ffff
+TraceColor=#00aa00
+MarkerColor=#ff55ff
 TraceWidth=2
 MarkerWidth=9
 BackgroundColor=#000000
@@ -82,13 +82,13 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=58
+index=34
 
 [Cursor_1_2]
-index=5
+index=48
 
 [Cursor_2_1]
-index=53
+index=66
 
 [Cursor_2_2]
-index=36
+index=26
