--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -7,21 +7,25 @@ SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#00aa00
-MarkerColor=#ff55ff
-TraceWidth=2
-MarkerWidth=9
+TraceColor=#aa55ff
+MarkerColor1=#ff0000
+MarkerColor2=#ffaaff
+TraceWidth=3
+MarkerWidth1=7
+MarkerWidth2=5
 BackgroundColor=#000000
 TextColor=#ff5500
 AxisColor=#55aaff
-db_times=Voltage ratio
+db_times=dB
 graph_number=1
 
 [Graphic2]
 TraceColor=#55ffff
-MarkerColor=#ff00ff
+MarkerColor1=#5555ff
+MarkerColor2=#ff557f
 TraceWidth=3
-MarkerWidth=13
+MarkerWidth1=7
+MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ffff7f
 AxisColor=#ffaaff
@@ -82,13 +86,13 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=34
+index=0
 
 [Cursor_1_2]
-index=48
+index=0
 
 [Cursor_2_1]
-index=66
+index=40
 
 [Cursor_2_2]
-index=26
+index=50
