Implement show_frequency_difference_dialog to display marker differences

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -33,7 +33,7 @@ db_times=dB
 graph_number=2
 
 [Markers]
-locked=true
+locked=false
 
 [Dark_Light]
 is_dark_mode=false
@@ -86,13 +86,13 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=66
+index=0
 
 [Cursor_1_2]
-index=66
+index=0
 
 [Cursor_2_1]
-index=47
+index=71
 
 [Cursor_2_2]
-index=47
+index=0
