--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,6 +1,6 @@
 [Tab1]
 SParameter=S11
-GraphType1=Magnitude
+GraphType1=Phase
 
 [Tab2]
 SParameter=S11
@@ -92,7 +92,7 @@ index=0
 index=0
 
 [Cursor_2_1]
-index=71
+index=0
 
 [Cursor_2_2]
 index=0
