Add Normalized Smith Button y context menu

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,14 +1,14 @@
 [Tab1]
 SParameter=S11
-GraphType1=Phase
+GraphType1=Smith Diagram
 
 [Tab2]
 SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#aa55ff
-MarkerColor1=#ff0000
+TraceColor=#ff557f
+MarkerColor1=#55aa00
 MarkerColor2=#ffaaff
 TraceWidth=3
 MarkerWidth1=7
