Fix PDF export bug: ensure correct saving of parameters

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,12 +1,12 @@
 [Calibration]
-Kits=false
-Method=OSM (Open - Short - Match)
-NoCalibration=true
-Parameter="S11, S21"
+Kits=true
+Method=Normalization
+NoCalibration=false
+Parameter=S21
 isImportDut=false
 DUT=false
-id=5
-Name=OSM_Calibration_20251028_195225_5
+id=1
+Name=Normalization_Calibration_20251028_192343_1
 
 [Kit_1]
 kit_name=Normalization_Calibration_20251028_192343
