Fix layout issue when switching from Smith Diagram: prevent deformation of left and right graphs.

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,7 +1,7 @@
 [Calibration]
-Kits=true
+Kits=false
 Method=Normalization
-NoCalibration=false
+NoCalibration=true
 Parameter=S21
 isImportDut=false
 DUT=false
