--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -4,7 +4,7 @@ GraphType1=Magnitude
 
 [Tab2]
 SParameter=S11
-GraphType2=Magnitude
+GraphType2=Phase
 
 [Graphic1]
 TraceColor=#ff557f
@@ -86,10 +86,10 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=0
+index=63
 
 [Cursor_1_2]
-index=0
+index=64
 
 [Cursor_2_1]
 index=0
