--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,44 +1,17 @@
 [Calibration]
 Kits=false
 Method=Normalization
-NoCalibration=true
+NoCalibration=false
 Parameter=S21
 isImportDut=false
 DUT=false
+DateTime_Calibration=2025-10-31 11:51:33
+Name=OSM_Calibration_20251031_113954_1
 id=1
-Name=Normalization_Calibration_20251028_192343_1
+DateTime_Kits=2025-10-31 11:39:55
 
 [Kit_1]
-kit_name=Normalization_Calibration_20251028_192343
-method=Normalization
+kit_name=OSM_Calibration_20251031_113954
+method=OSM (Open - Short - Match)
 id=1
-
-[Kit_2]
-kit_name=1PortN_Calibration_20251028_192632
-method=1-Port+N
-id=2
-
-[Kit_3]
-kit_name=Enhanced Response_Calibration_20251028_193147
-method=Enhanced-Response
-id=3
-
-[Kit_4]
-kit_name=Normalization_Calibration_20251028_195050
-method=Normalization
-id=4
-
-[Kit_5]
-kit_name=OSM_Calibration_20251028_195225
-method=OSM (Open - Short - Match)
-id=5
-
-[Kit_6]
-kit_name=OSM_Calibration_20251028_195317
-method=OSM (Open - Short - Match)
-id=6
-
-[Kit_7]
-kit_name=OSM_Calibration_20251028_195414
-method=OSM (Open - Short - Match)
-id=7
+DateTime_Kits=2025-10-31 11:39:55
