Add interactive draggable markers and fix export/preview without markers

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -9,7 +9,7 @@ GraphType2=Phase
 [Graphic1]
 TraceColor=#ff557f
 MarkerColor1=#55aa00
-MarkerColor2=#ffaaff
+MarkerColor2=#aa0000
 TraceWidth=3
 MarkerWidth1=7
 MarkerWidth2=5
@@ -86,13 +86,13 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=0
+index=22
 
 [Cursor_1_2]
 index=0
 
 [Cursor_2_1]
-index=0
+index=70
 
 [Cursor_2_2]
 index=0
