--- a/src/NanoVNA_UTN_Toolkit/calibration/config/measurement_numbers.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/measurement_numbers.ini
@@ -1,9 +1,3 @@
 [General]
-Test%20con%20fer=1
-test=2
-normalizacion=3
-test2=4
-test3=5
-Test1=6
-Test4=7
-Test5=8
+LastResetDate=2025-11-02
+NanoVNA-V2=5
