Add graph preview dialog before PDF generation

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,8 +1,8 @@
 [Calibration]
-Kits=false
-Method=Normalization
-NoCalibration=true
-Parameter=S21
+Kits=true
+Method=OSM (Open - Short - Match)
+NoCalibration=false
+Parameter=S11
 isImportDut=false
 DUT=false
 DateTime_Calibration=2025-10-31 11:51:33
