--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,7 +1,7 @@
 [Calibration]
-Kits=false
+Kits=true
 Method=OSM (Open - Short - Match)
-NoCalibration=true
+NoCalibration=false
 Parameter=S11
 isImportDut=false
 DUT=false
