--- a/src/NanoVNA_UTN_Toolkit/calibration/config/measurement_numbers.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/measurement_numbers.ini
@@ -1,3 +1,6 @@
 [General]
-LastResetDate=2025-11-05
-NanoVNA-H=16
+LastResetDate=2025-11-04
+NanoVNA-H=13
+holasasasasasasa=1
+peuba3=1
+testeoprueba=1
