Edit Window modified to display cursors in their current positions

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -9,26 +9,26 @@ GraphType2=Phase
 [Graphic1]
 TraceColor=#ff557f
 MarkerColor1=#55aa00
-MarkerColor2=#aa0000
+MarkerColor2=#ffaaff
 TraceWidth=3
 MarkerWidth1=7
-MarkerWidth2=5
+MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ff5500
-AxisColor=#55aaff
+AxisColor=#ffffff
 db_times=dB
 graph_number=1
 
 [Graphic2]
 TraceColor=#55ffff
-MarkerColor1=#5555ff
-MarkerColor2=#ff557f
+MarkerColor1=#55aa00
+MarkerColor2=#ffff00
 TraceWidth=3
-MarkerWidth1=7
+MarkerWidth1=8
 MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ffff7f
-AxisColor=#ffaaff
+AxisColor=#ffffff
 db_times=dB
 graph_number=2
 
@@ -86,7 +86,7 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=192
+index=0
 
 [Cursor_1_2]
 index=0
