--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,10 +1,10 @@
 [Tab1]
-SParameter=S11
-GraphType1=Smith Diagram
+SParameter=S21
+GraphType1=Magnitude
 
 [Tab2]
-SParameter=S11
-GraphType2=Phase
+SParameter=S21
+GraphType2=Magnitude
 
 [Graphic1]
 TraceColor=#ff557f
