Fixed various bugs when switching dB mode on both graphs

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,14 +1,14 @@
 [Tab1]
-SParameter=S21
-GraphType1=Magnitude
+SParameter=S11
+GraphType1=Phase
 
 [Tab2]
-SParameter=S21
-GraphType2=Magnitude
+SParameter=S11
+GraphType2=Smith Diagram
 
 [Graphic1]
 TraceColor=#ff557f
-MarkerColor1=#55aa00
+MarkerColor1=#ffff00
 MarkerColor2=#ffaaff
 TraceWidth=3
 MarkerWidth1=7
@@ -16,7 +16,7 @@ MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ff5500
 AxisColor=#ffffff
-db_times=dB
+db_times_S11=dB
 graph_number=1
 
 [Graphic2]
@@ -31,6 +31,7 @@ TextColor=#ffff7f
 AxisColor=#ffffff
 db_times=dB
 graph_number=2
+db_times_S11=dB
 
 [Markers]
 locked=false
@@ -86,10 +87,10 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=0
+index=36
 
 [Cursor_1_2]
-index=0
+index=17
 
 [Cursor_2_1]
 index=0
