fix: corrected cursor and graph updates when switching between linear and dB modes

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,10 +1,10 @@
 [Tab1]
 SParameter=S11
-GraphType1=Phase
+GraphType1=Magnitude
 
 [Tab2]
-SParameter=S11
-GraphType2=Smith Diagram
+SParameter=S21
+GraphType2=Magnitude
 
 [Graphic1]
 TraceColor=#ff557f
@@ -16,7 +16,7 @@ MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ff5500
 AxisColor=#ffffff
-db_times_S11=dB
+db_times=dB
 graph_number=1
 
 [Graphic2]
@@ -31,7 +31,6 @@ TextColor=#ffff7f
 AxisColor=#ffffff
 db_times=dB
 graph_number=2
-db_times_S11=dB
 
 [Markers]
 locked=false
@@ -87,10 +86,10 @@ Qframe\color=white
 QComboBox\color=white
 
 [Cursor_1_1]
-index=36
+index=0
 
 [Cursor_1_2]
-index=17
+index=0
 
 [Cursor_2_1]
 index=0
