Resolve sweep config sync between graphics_window and sweep_options_window

--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,9 +1,9 @@
 [Frequency]
-StartFreqHz=50000
-StopFreqHz=1.5e+09
+StartFreqHz=77000
+StopFreqHz=778000
 Segments=101
 StartUnit=kHz
-StopUnit=GHz
+StopUnit=kHz
 
 [Limits]
 MaxFrequencyHz=6000000000
