Enhance QGroupBox styling by adding border settings for dark/light mode

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -84,6 +84,7 @@ QSpinBox\background-color=white
 Qframe\background-color=white
 Qframe\color=white
 QComboBox\color=white
+QGroupBox\border=1px solid #5f5f5f
 
 [Cursor_1_1]
 index=0
