Fix cursor visibility issue in Edit Window

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,28 +1,28 @@
 [Tab1]
 SParameter=S11
-GraphType1=Magnitude
+GraphType1=Smith Diagram
 
 [Tab2]
-SParameter=S21
-GraphType2=Magnitude
+SParameter=S11
+GraphType2=Phase
 
 [Graphic1]
-TraceColor=#ff557f
-MarkerColor1=#ffff00
-MarkerColor2=#ffaaff
+TraceColor=#aa007f
+MarkerColor1=#55ff00
+MarkerColor2=#55ff7f
 TraceWidth=3
-MarkerWidth1=7
+MarkerWidth1=6
 MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ff5500
 AxisColor=#ffffff
-db_times=dB
+db_times=Voltage ratio
 graph_number=1
 
 [Graphic2]
 TraceColor=#55ffff
 MarkerColor1=#55aa00
-MarkerColor2=#ffff00
+MarkerColor2=#aa5500
 TraceWidth=3
 MarkerWidth1=8
 MarkerWidth2=7
@@ -90,10 +90,10 @@ QGroupBox\border=1px solid #5f5f5f
 index=0
 
 [Cursor_1_2]
-index=0
+index=7
 
 [Cursor_2_1]
 index=0
 
 [Cursor_2_2]
-index=0
+index=75
