--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,9 +1,9 @@
 [Frequency]
-StartFreqHz=77000
-StopFreqHz=778000
-Segments=101
+StartFreqHz=50000
+StopFreqHz=2e+09
+Segments=201
 StartUnit=kHz
-StopUnit=kHz
+StopUnit=GHz
 
 [Limits]
 MaxFrequencyHz=6000000000
