Fix marker visibility and cursor update bugs, and unify text color styling

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,35 +1,35 @@
 [Tab1]
 SParameter=S11
-GraphType1=Smith Diagram
+GraphType1=Phase
 
 [Tab2]
-SParameter=S11
-GraphType2=Phase
+SParameter=S21
+GraphType2=Magnitude
 
 [Graphic1]
 TraceColor=#aa007f
-MarkerColor1=#55ff00
-MarkerColor2=#55ff7f
+MarkerColor1=#555500
+MarkerColor2=#55ffff
 TraceWidth=3
-MarkerWidth1=6
-MarkerWidth2=7
+MarkerWidth1=8
+MarkerWidth2=8
 BackgroundColor=#000000
-TextColor=#ff5500
+TextColor=#ff0000
 AxisColor=#ffffff
-db_times=Voltage ratio
+db_times=dB
 graph_number=1
 
 [Graphic2]
 TraceColor=#55ffff
-MarkerColor1=#55aa00
+MarkerColor1=#55557f
 MarkerColor2=#aa5500
 TraceWidth=3
-MarkerWidth1=8
+MarkerWidth1=7
 MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#ffff7f
 AxisColor=#ffffff
-db_times=dB
+db_times=Voltage ratio
 graph_number=2
 
 [Markers]
@@ -90,10 +90,10 @@ QGroupBox\border=1px solid #5f5f5f
 index=0
 
 [Cursor_1_2]
-index=7
+index=0
 
 [Cursor_2_1]
 index=0
 
 [Cursor_2_2]
-index=75
+index=0
