Updated the graphics window to include new S-parameter update functions for left and right panels. Improved code readability by renaming variables and adding comments in English.

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,14 +1,14 @@
 [Tab1]
 SParameter=S11
-GraphType1=Phase
+GraphType1=Smith Diagram
 
 [Tab2]
-SParameter=S21
+SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
 TraceColor=#aa007f
-MarkerColor1=#555500
+MarkerColor1=#00ff00
 MarkerColor2=#55ffff
 TraceWidth=3
 MarkerWidth1=8
@@ -16,19 +16,19 @@ MarkerWidth2=8
 BackgroundColor=#000000
 TextColor=#ff0000
 AxisColor=#ffffff
-db_times=dB
+db_times=Voltage ratio
 graph_number=1
 
 [Graphic2]
-TraceColor=#55ffff
-MarkerColor1=#55557f
-MarkerColor2=#aa5500
+TraceColor=#ff0000
+MarkerColor1=#55aa00
+MarkerColor2=#005500
 TraceWidth=3
 MarkerWidth1=7
 MarkerWidth2=7
-BackgroundColor=#000000
-TextColor=#ffff7f
-AxisColor=#ffffff
+BackgroundColor=#ffffff
+TextColor=#0000ff
+AxisColor=#000000
 db_times=Voltage ratio
 graph_number=2
 
