Added executable support for Graphic, Wizard, and Welcome windows

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,9 +1,15 @@
 [Calibration]
 Kits=false
-Method=OSM (Open - Short - Match)
-NoCalibration=true
-Parameter=S11
+Method=Normalization
+NoCalibration=false
+Parameter=S21
 isImportDut=false
 DUT=false
-DateTime_Calibration=2025-11-12 14:21:36
-DateTime_Kits=2025-10-31 11:39:55
+Name=Normalization_Calibration_20251206_174842_1
+DateTime_Calibration=2025-12-06 17:53:53
+
+[Kit_1]
+kit_name=Normalization_Calibration_20251206_174842
+method=Normalization
+id=1
+DateTime_Kits=2025-12-06 17:48:45
