--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,22 +1,22 @@
 [Tab1]
 SParameter=S11
-GraphType1=Smith Diagram
+GraphType1=Magnitude
 
 [Tab2]
 SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#aa007f
-MarkerColor1=#00ff00
-MarkerColor2=#55ffff
+TraceColor=#aa5500
+MarkerColor1=#ff0000
+MarkerColor2=#ffaaff
 TraceWidth=3
 MarkerWidth1=8
 MarkerWidth2=8
 BackgroundColor=#000000
 TextColor=#ff0000
 AxisColor=#ffffff
-db_times=Voltage ratio
+db_times=dB
 graph_number=1
 
 [Graphic2]
@@ -26,10 +26,10 @@ MarkerColor2=#005500
 TraceWidth=3
 MarkerWidth1=7
 MarkerWidth2=7
-BackgroundColor=#ffffff
+BackgroundColor=#000000
 TextColor=#0000ff
-AxisColor=#000000
-db_times=Voltage ratio
+AxisColor=#ffffff
+db_times=dB
 graph_number=2
 
 [Markers]
