Added executable support for View, Graphic Utils, and Edit windows

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,5 +1,5 @@
 [Calibration]
-Kits=false
+Kits=true
 Method=Normalization
 NoCalibration=false
 Parameter=S21
@@ -7,6 +7,8 @@ isImportDut=false
 DUT=false
 Name=Normalization_Calibration_20251206_174842_1
 DateTime_Calibration=2025-12-06 17:53:53
+id=1
+DateTime_Kits=2025-12-06 17:48:45
 
 [Kit_1]
 kit_name=Normalization_Calibration_20251206_174842
