--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,13 +1,13 @@
 [Tab1]
 SParameter=S11
-GraphType1=Magnitude
+GraphType1=Smith Diagram
 
 [Tab2]
 SParameter=S11
 GraphType2=Magnitude
 
 [Graphic1]
-TraceColor=#aa5500
+TraceColor=#00ff00
 MarkerColor1=#ff0000
 MarkerColor2=#ffaaff
 TraceWidth=3
