Added executable support for the Sweep Option window and all export features

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,6 +1,6 @@
 [Tab1]
-SParameter=S11
-GraphType1=Smith Diagram
+SParameter=S21
+GraphType1=Magnitude
 
 [Tab2]
 SParameter=S11
@@ -8,8 +8,8 @@ GraphType2=Magnitude
 
 [Graphic1]
 TraceColor=#00ff00
-MarkerColor1=#ff0000
-MarkerColor2=#ffaaff
+MarkerColor1=#aa55ff
+MarkerColor2=#55ffff
 TraceWidth=3
 MarkerWidth1=8
 MarkerWidth2=8
