--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,12 +1,12 @@
 [Calibration]
-Kits=true
-Method=Normalization
+Kits=false
+Method=OSM (Open - Short - Match)
 NoCalibration=false
-Parameter=S21
+Parameter=S11
 isImportDut=false
 DUT=false
 Name=Normalization_Calibration_20251206_174842_1
-DateTime_Calibration=2025-12-06 17:53:53
+DateTime_Calibration=2025-12-07 11:25:31
 id=1
 DateTime_Kits=2025-12-06 17:48:45
 
