--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,17 +1,35 @@
 [Calibration]
 Kits=false
-Method=OSM (Open - Short - Match)
+Method=1-Port+N
 NoCalibration=false
-Parameter=S11
+Parameter="S11, S21"
 isImportDut=false
 DUT=false
-Name=Normalization_Calibration_20251206_174842_1
-DateTime_Calibration=2025-12-07 11:25:31
+DateTime_Calibration=2025-12-08 13:50:07
+DateTime_Kits=2025-12-08 13:37:03
 id=1
-DateTime_Kits=2025-12-06 17:48:45
+Name=1PortN_Calibration_20251208_135239_4
 
 [Kit_1]
-kit_name=Normalization_Calibration_20251206_174842
-method=Normalization
+kit_name=Enhanced Response_Calibration_20251208_125712_(300MHz a 600MHz)
+method=Enhanced-Response
 id=1
-DateTime_Kits=2025-12-06 17:48:45
+DateTime_Kits=2025-12-08 13:04:18
+
+[Kit_2]
+kit_name=Normalization_Calibration_20251208_125847_(300MHz a 600MHz)
+method=Normalization
+id=2
+DateTime_Kits=2025-12-08 13:04:18
+
+[Kit_3]
+kit_name=OSM_Calibration_20251208_130406_(300MHz a 600MHz)
+method=OSM (Open - Short - Match)
+id=3
+DateTime_Kits=2025-12-08 13:04:18
+
+[Kit_4]
+kit_name=1PortN_Calibration_20251208_135239
+method=1-Port+N
+id=4
+DateTime_Kits=2025-12-08 13:52:41
