Implement export of calibration kit folders

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,14 +1,14 @@
 [Calibration]
-Kits=false
-Method=1-Port+N
+Kits=true
+Method=Enhanced-Response
 NoCalibration=false
 Parameter="S11, S21"
 isImportDut=false
 DUT=false
 DateTime_Calibration=2025-12-08 13:50:07
-DateTime_Kits=2025-12-08 13:37:03
+DateTime_Kits=2025-12-08 13:04:18
 id=1
-Name=1PortN_Calibration_20251208_135239_4
+Name=Enhanced Response_Calibration_20251208_125712_(300MHz a 600MHz)_1
 
 [Kit_1]
 kit_name=Enhanced Response_Calibration_20251208_125712_(300MHz a 600MHz)
