Fix frequency axis unit scaling

--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,8 +1,8 @@
 [Frequency]
-StartFreqHz=3e+08
-StopFreqHz=6e+08
+StartFreqHz=50000
+StopFreqHz=4e+08
 Segments=101
-StartUnit=MHz
+StartUnit=kHz
 StopUnit=MHz
 
 [Limits]
