Fix frequency axis unit scaling in calibration wizard

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,7 +1,7 @@
 [Calibration]
 Kits=false
 Method=Enhanced-Response
-NoCalibration=true
+NoCalibration=false
 Parameter="S11, S21"
 isImportDut=false
 DUT=false
