--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,7 +1,7 @@
 [Calibration]
 Kits=false
 Method=Enhanced-Response
-NoCalibration=false
+NoCalibration=true
 Parameter="S11, S21"
 isImportDut=false
 DUT=false
