Fix wizard navigation when all calibration kits are deleted

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -29,7 +29,7 @@ MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#0000ff
 AxisColor=#ffffff
-db_times=dB
+db_times=Voltage ratio
 graph_number=2
 
 [Markers]
