--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,35 +1,10 @@
 [Calibration]
 Kits=false
-Method=Enhanced-Response
-NoCalibration=false
-Parameter="S11, S21"
+Method=Normalization
+NoCalibration=true
+CalibrationWizard=false
+Parameter=S21
 isImportDut=false
 DUT=false
-DateTime_Calibration=2025-12-08 13:50:07
-DateTime_Kits=2025-12-08 13:04:18
-id=1
-Name=Enhanced Response_Calibration_20251208_125712_(300MHz a 600MHz)_1
-
-[Kit_1]
-kit_name=Enhanced Response_Calibration_20251208_125712_(300MHz a 600MHz)
-method=Enhanced-Response
-id=1
-DateTime_Kits=2025-12-08 13:04:18
-
-[Kit_2]
-kit_name=Normalization_Calibration_20251208_125847_(300MHz a 600MHz)
-method=Normalization
-id=2
-DateTime_Kits=2025-12-08 13:04:18
-
-[Kit_3]
-kit_name=OSM_Calibration_20251208_130406_(300MHz a 600MHz)
-method=OSM (Open - Short - Match)
-id=3
-DateTime_Kits=2025-12-08 13:04:18
-
-[Kit_4]
-kit_name=1PortN_Calibration_20251208_135239
-method=1-Port+N
-id=4
-DateTime_Kits=2025-12-08 13:52:41
+DateTime_Calibration=2025-12-09 11:43:47
+DateTime_Kits=2025-12-09 12:20:19
