Fix frequency axis update by regenerating sweep frequency array

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -29,7 +29,7 @@ MarkerWidth2=7
 BackgroundColor=#000000
 TextColor=#0000ff
 AxisColor=#ffffff
-db_times=Voltage ratio
+db_times=dB
 graph_number=2
 
 [Markers]
@@ -90,10 +90,10 @@ QGroupBox\border=1px solid #5f5f5f
 index=0
 
 [Cursor_1_2]
-index=11
+index=0
 
 [Cursor_2_1]
-index=57
+index=0
 
 [Cursor_2_2]
-index=39
+index=0
