--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,9 +1,9 @@
 [Frequency]
-StartFreqHz=50000
-StopFreqHz=1e+09
+StartFreqHz=2e+08
+StopFreqHz=3e+08
 Segments=101
-StartUnit=kHz
-StopUnit=GHz
+StartUnit=MHz
+StopUnit=MHz
 
 [Limits]
 MaxFrequencyHz=6000000000
