Implement sweep range update based on calibration start and stop frequencies

--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,6 +1,6 @@
 [Frequency]
-StartFreqHz=2e+08
-StopFreqHz=3e+08
+StartFreqHz=100000000
+StopFreqHz=600000000
 Segments=101
 StartUnit=MHz
 StopUnit=MHz
