--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,10 +1,10 @@
 [Calibration]
 Kits=false
 Method=Normalization
-NoCalibration=true
-CalibrationWizard=false
+NoCalibration=false
+CalibrationWizard=true
 Parameter=S21
 isImportDut=false
 DUT=false
-DateTime_Calibration=2025-12-09 12:40:09
+DateTime_Calibration=2025-12-09 14:06:35
 DateTime_Kits=2025-12-09 12:20:19
