Fix unwanted blue text selection in marker frequency field

--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,8 +1,8 @@
 [Calibration]
 Kits=false
 Method=Normalization
-NoCalibration=false
-CalibrationWizard=true
+NoCalibration=true
+CalibrationWizard=false
 Parameter=S21
 isImportDut=false
 DUT=false
