--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,6 +1,6 @@
 [Frequency]
-StartFreqHz=100000000
-StopFreqHz=600000000
+StartFreqHz=2e+08
+StopFreqHz=6e+08
 Segments=101
 StartUnit=MHz
 StopUnit=MHz
