Fix frequency text edits not moving cursors

--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,10 +1,10 @@
 [Tab1]
-SParameter=S21
-GraphType1=Magnitude
+SParameter=S11
+GraphType1=Smith Diagram
 
 [Tab2]
 SParameter=S11
-GraphType2=Magnitude
+GraphType2=Smith Diagram
 
 [Graphic1]
 TraceColor=#00ff00
@@ -87,7 +87,7 @@ QComboBox\color=white
 QGroupBox\border=1px solid #5f5f5f
 
 [Cursor_1_1]
-index=46
+index=0
 
 [Cursor_1_2]
 index=0
