--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,6 +1,6 @@
 [Frequency]
-StartFreqHz=2e+08
-StopFreqHz=6e+08
+StartFreqHz=50000
+StopFreqHz=1500000000
 Segments=101
 StartUnit=MHz
 StopUnit=MHz
