--- a/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/graphics_windows/ini/config.ini
@@ -1,14 +1,14 @@
 [Tab1]
 SParameter=S11
-GraphType1=Smith Diagram
+GraphType1=Magnitude
 
 [Tab2]
 SParameter=S11
-GraphType2=Smith Diagram
+GraphType2=Phase
 
 [Graphic1]
 TraceColor=#00ff00
-MarkerColor1=#aa55ff
+MarkerColor1=#55aa7f
 MarkerColor2=#55ffff
 TraceWidth=3
 MarkerWidth1=8
@@ -38,53 +38,59 @@ locked=false
 [Dark_Light]
 is_dark_mode=false
 text_light_dark=Light Mode 🔆
-QWidget\background-color=#7f7f7f
-QTabWidget_pane\background-color=#6f6f6f
-QTabBar\background-color=#4d4d4d
+QWidget\background-color=#3a3a3a
+QTabWidget_pane\background-color=#343434
+QTabBar\background-color=#2f2f2f
 QTabBar\color=white
 QTabBar\padding=5px 12px
 QTabBar\border=none
 QTabBar\border-top-left-radius=6px
 QTabBar\border-top-right-radius=6px
-QTabBar_selected\background-color=#2b2b2b
-QSpinBox\color=black
-QSpinBox\border=1px solid #5f5f5f
+QTabBar_selected\background-color=#4a4a4a
+QTabBar_selected\color=white
+QSpinBox\color=white
+QSpinBox\background-color=#2e2e2e
+QSpinBox\border=1px solid #4a4a4a
 QSpinBox\border-radius=8px
 QGroupBox_title\color=white
 QLabel\color=white
-QLineEdit\background-color=#6f6f6f
+QLineEdit\background-color=#2e2e2e
 QLineEdit\color=white
-QLineEdit\border=1px solid #5f5f5f
+QLineEdit\border=1px solid #4a4a4a
 QLineEdit\border-radius=6px
 QLineEdit\padding=4px
-QLineEdit_focus\background-color=#5f5f5f
-QLineEdit_focus\border=1px solid #4d90fe
-QPushButton\background-color=#6f6f6f
+QLineEdit_focus\background-color=#383838
+QLineEdit_focus\border=1px solid #6aa2ff
+QPushButton\background-color=#343434
 QPushButton\color=white
-QPushButton\border=1px solid #5f5f5f
+QPushButton\border=1px solid #4a4a4a
 QPushButton\border-radius=6px
 QPushButton\padding=4px 10px
-QPushButton_hover\background-color=#4d4d4d
-QPushButton_pressed\background-color=#5c5c5c
-QPushButton_disabled\background-color=#2a2a2a
-QPushButton_disabled\color=#666666
-QPushButton_disabled\border=1px solid #444444
-QMenu\background=#7f7f7f
+QPushButton_hover\background-color=#3f3f3f
+QPushButton_pressed\background-color=#2a2a2a
+QPushButton_disabled\background-color=#242424
+QPushButton_disabled\color=#777777
+QPushButton_disabled\border=1px solid #333333
+QMenu\background=#3a3a3a
 QMenu\color=white
-QMenu\border=1px solid #6f6f6f
-QMenuBar\background-color=#7f7f7f
+QMenu\border=1px solid #4a4a4a
+QMenuBar\background-color=#3a3a3a
 QMenuBar\color=white
 QMenuBar_item\background=transparent
 QMenuBar_item\color=white
 QMenuBar_item\padding=4px 10px
-QMenuBar_item_selected\background-color=#4d4d4d
-QMenu_item_selected\background-color=#4d4d4d
-QTabBar_selected\color=white
-QSpinBox\background-color=white
+QMenuBar_item_selected\background-color=#4a4a4a
+QMenu_item_selected\background-color=#4a4a4a
 Qframe\background-color=white
 Qframe\color=white
+QComboBox\background-color=#3b3b3b
 QComboBox\color=white
-QGroupBox\border=1px solid #5f5f5f
+QComboBox\border=2px solid white
+QGroupBox\border=1.5px solid white
+QComboBox\border-radius=6px
+QComboBox%3Ahover\background-color=#4d4d4d
+QComboBox%3Afocus\background-color=#4d4d4d
+QComboBox%3A%3Aplaceholder\color=#cccccc
 
 [Cursor_1_1]
 index=0
