--- a/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
+++ b/src/NanoVNA_UTN_Toolkit/calibration/config/calibration_config.ini
@@ -1,10 +1,10 @@
 [Calibration]
 Kits=false
-Method=Normalization
-NoCalibration=false
-CalibrationWizard=true
-Parameter=S21
+Method=OSM (Open - Short - Match)
+NoCalibration=true
+CalibrationWizard=false
+Parameter=S11
 isImportDut=false
 DUT=false
-DateTime_Calibration=2025-12-10 09:59:10
-DateTime_Kits=2025-12-09 12:20:19
+DateTime_Calibration=2025-12-11 13:17:33
+DateTime_Kits=2025-12-11 13:17:32
