--- a/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
+++ b/src/NanoVNA_UTN_Toolkit/ui/sweep_window/config/config.ini
@@ -1,9 +1,9 @@
 [Frequency]
-StartFreqHz=300000000
-StopFreqHz=600000000
+StartFreqHz=50000
+StopFreqHz=1500000000
 Segments=101
-StartUnit=MHz
-StopUnit=MHz
+StartUnit=kHz
+StopUnit=GHz
 
 [Limits]
 MaxFrequencyHz=6000000000
